--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -698,7 +698,7 @@ page = 6
 
 ; Launch Control
       launchPin   = bits  , U08,      48, [0:5],      "Board Default", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
-      launchEnable= bits,   U08,      48, [6:6],      "No",        "Yes"
+      launchEnable= bits,   U08,      48, [6:6],      "No",        "Yes"                                                                                                                                                                                                                                                                                                                                                                                                                                                              
       launchHiLo  = bits,   U08,      48, [7:7],    "LOW",        "HIGH"
 
       lnchSoftLim = scalar, U08,      49,             "rpm",      100,    0.0,    100, 25500, 0
@@ -1472,13 +1472,44 @@ page = 15
       airConRPMCutTime              = scalar,  U08,   94,    "s",    0.1,        0.0,     0.0,     25.5,    1
       airConFanPin                  = bits,    U08,   95,  [0:5], "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
       airConUnused4                 = bits,    U08,   95,  [6:7], "0", "1", "2", "3"
-      airConIdleUpRPMAdder          = scalar,  U08,   96,  "Added Target RPM", 10.0, 0.0, 0.0,    250.0,    0
+      airConIdleUpRPMAdder          = scalar,  U08,   96,  "Added Target RPM", 10.0, 0.0, 0.0,    250.0,    0                                                                                                                                                                                                                                                                                                                                                                           
       airConPwmFanMinDuty           = scalar,  U08,   97,  "%",      0.5,        0.0,     0.0,    100.0,    1
 
       rollingProtRPMDelta           = array,   S08,   98, [4], "RPM",     10.0,    0,   -1000,   0,    0           
       rollingProtCutPercent         = array,   U08,   102, [4],    "%",    1.0,    0,   0,    100,      0
+       ;trannscontrol
+      shift2_1vss                   = array,   U08,   106, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift2_1tps                   = array,   U08,   110, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift1_2vss                   = array,   U08,   114, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift1_2tps                   = array,   U08,   118, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift3_2vss                   = array,   U08,   122, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift3_2tps                   = array,   U08,   126, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0
+      shift2_3vss                   = array,   U08,   130, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift2_3tps                   = array,   U08,   134, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift4_3vss                   = array,   U08,   138, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift4_3tps                   = array,   U08,   142, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift3_4vss                   = array,   U08,   146, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      shift3_4tps                   = array,   U08,   150, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      unlockshiftvss                = array,   U08,   154, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      unlockshifttps                = array,   U08,   158, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      lockshiftvss                  = array,   U08,   162, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
+      lockshifttps                  = array,   U08,   166, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
 
-      Unused15_98_255               = array,   U08,   98,   [150],   "%", 1.0,   0.0,     0.0,      255,    0
+     TrannsEnable                  = bits,    U08,  170,  [0:0], "Off", "On"
+     CpinEnable                    = bits,    U08,  170,  [1:1], "Off", "On"
+     BpinPollarity                 = bits,    U08,  170,  [2:3], "4L60E", "4L80E", "INVALID","INVALID"                                                                                                                                                                          
+
+     Apin                          = bits,    U08,  170,  [4:7],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+     Bpin                          = bits,    U08,  171,  [0:3],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"
+     Cpin                          = bits,    U08,  171,  [4:7],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"
+ 
+     ApinMaxRPM                    = scalar,  U08,  172,  "RPM",    100,        0.0,     0.0,    25500,    0
+     BpinMaxRPM                    = scalar,  U08,  173,  "RPM",    100,        0.0,     0.0,    25500,    0
+
+     inputpinN                     = bits,    U08,  174,  [0:3],  "20","21","37","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID"
+     inputpinR                     = bits,    U08,  174,  [4:7],  "20","21","37","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID"
+ 
+      Unused15_98_255              = array,   U08,   175,   [81],   "%", 1.0,   0.0,     0.0,      255,    0
 
 ;-------------------------------------------------------------------------------
 
@@ -1993,6 +2024,8 @@ menuDialog = main
         subMenu = std_separator
         subMenu = Canin_config,         "External Auxillary Input Channel Configuration", {enable_secondarySerial || CANisAvailable }
         subMenu = Auxin_config,         "Local Auxillary Input Channel Configuration"
+        subMenu = shiftcon, "TRANNSCONTROL"
+        subMenu = 4l80/4l60, "SHIFT TABLES",  {TrannsEnable}
         ;subMenu = std_separator
         ;subMenu = Canout_config, "Canbus Output Configuration"
         
@@ -2474,6 +2507,29 @@ menuDialog = main
 ; The field name can be either a constant reference, or a reference to another
 ; dialog which will be added.
 ; dialogs can be nested and can be mixed with fields
+
+
+    dialog = 4l80/4l60, "SHIFT TABLES"  
+        panel = 2-1shifttable_curve,
+        panel = 1-2shifttable_curve, 
+        panel = 3-2shifttable_curve, 
+        panel = 2-3shifttable_curve, 
+        panel = 4-3shifttable_curve, 
+        panel = 3-4shifttable_curve, 
+        panel = unlockshifttable_curve, 
+        panel = lockshifttable_curve,
+
+    dialog = shiftcon, "TRANNSCONTROL"
+        field = "TRANNS ENABLE",     TrannsEnable
+        field = "4L80/4L60",         BpinPollarity, {TrannsEnable}
+        field = "input 1st hold ",   inputpinN         {TrannsEnable}
+        field = "input 2nd hold ",   inputpinR     {TrannsEnable}
+        field = "Asol",              Apin,          {TrannsEnable}
+        field = "Bsol",              Bpin,          {TrannsEnable}
+        field = "WOT1-2",            ApinMaxRPM,    {TrannsEnable}
+        field = "WOT2-3",            BpinMaxRPM,    {TrannsEnable}
+        field = "LOCKUP",            Cpin,      {TrannsEnable},    {CpinEnable}
+        field = "LOCKUP ENABLE",     CpinEnable,    {TrannsEnable}
 
     dialog = engine_constants_southwest, "Speeduino Board"
         field = "!This is a critical setting!"
@@ -4815,6 +4871,77 @@ cmdVSSratio6 =      "E\x99\x06"
           size            = 400, 200
 
 
+        curve = 2-1shifttable_curve, "2-1"
+          columnLabel     = "tps","2-1","tps","1-2","tps","3-2","tps","2-3","tps","4-3","tps","3-4","tps","unlock","tps","lock"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift2_1tps
+          yBins           = shift2_1vss
+          xBins           = shift1_2tps
+          yBins           = shift1_2vss 
+          xBins           = shift3_2tps
+          yBins           = shift3_2vss
+          xBins           = shift2_3tps
+          yBins           = shift2_3vss
+          xBins           = shift4_3tps
+          yBins           = shift4_3vss 
+          xBins           = shift3_4tps
+          yBins           = shift3_4vss 
+          xBins           = unlockshifttps
+          yBins           = unlockshiftvss 
+          xBins           = lockshifttps
+          yBins           = lockshiftvss 
+          size            = 400, 600
+
+        curve = 1-2shifttable_curve, "1-2"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift1_2tps
+          yBins           = shift1_2vss 
+          
+        curve = 3-2shifttable_curve, "3-2"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift3_2tps
+          yBins           = shift3_2vss 
+        
+        curve = 2-3shifttable_curve, "2-3"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift2_3tps
+          yBins           = shift2_3vss 
+          
+        curve = 4-3shifttable_curve, "4-3"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift4_3tps
+          yBins           = shift4_3vss 
+      
+        curve = 3-4shifttable_curve, "3-4"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = shift3_4tps
+          yBins           = shift3_4vss 
+        
+        curve = unlockshifttable_curve, "unlock"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = unlockshifttps
+          yBins           = unlockshiftvss 
+          
+        curve = lockshifttable_curve, "lock"
+          columnLabel     = "TPS","VSS"
+          xAxis           = 0, 100, 6
+          yAxis           = 0, 255, 20
+          xBins           = lockshifttps
+          yBins           = lockshiftvss 
+      
 [TableEditor]
    ;       table_id,    map3d_id,    "title",      page
    table = veTable1Tbl,  veTable1Map,  "VE Table",   2
