--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1471,7 +1471,7 @@ page = 15
       airConAfterStartDelay         = scalar,  U08,   93,    "s",    0.1,        0.0,     0.0,     25.5,    1
       airConRPMCutTime              = scalar,  U08,   94,    "s",    0.1,        0.0,     0.0,     25.5,    1
       airConFanPin                  = bits,    U08,   95,  [0:5], "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
-      airConUnused4                 = bits,    U08,   95,  [6:7], "0", "1", "2", "3"
+      airConUnused4                 = bits,    U08,   95,  [6:7], "0", "1", "2", "3"                                                                                                                                                                                                                                                                                             
       airConIdleUpRPMAdder          = scalar,  U08,   96,  "Added Target RPM", 10.0, 0.0, 0.0,    250.0,    0                                                                                                                                                                                                                                                                                                                                                                           
       airConPwmFanMinDuty           = scalar,  U08,   97,  "%",      0.5,        0.0,     0.0,    100.0,    1
 
@@ -1479,37 +1479,41 @@ page = 15
       rollingProtCutPercent         = array,   U08,   102, [4],    "%",    1.0,    0,   0,    100,      0
        ;trannscontrol
       shift2_1vss                   = array,   U08,   106, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift2_1tps                   = array,   U08,   110, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift2_1tps                   = array,   U08,   110, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       shift1_2vss                   = array,   U08,   114, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift1_2tps                   = array,   U08,   118, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift1_2tps                   = array,   U08,   118, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       shift3_2vss                   = array,   U08,   122, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift3_2tps                   = array,   U08,   126, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0
+      shift3_2tps                   = array,   U08,   126, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       shift2_3vss                   = array,   U08,   130, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift2_3tps                   = array,   U08,   134, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift2_3tps                   = array,   U08,   134, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       shift4_3vss                   = array,   U08,   138, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift4_3tps                   = array,   U08,   142, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift4_3tps                   = array,   U08,   142, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       shift3_4vss                   = array,   U08,   146, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift3_4tps                   = array,   U08,   150, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      shift3_4tps                   = array,   U08,   150, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       unlockshiftvss                = array,   U08,   154, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      unlockshifttps                = array,   U08,   158, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      unlockshifttps                = array,   U08,   158, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
       lockshiftvss                  = array,   U08,   162, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      lockshifttps                  = array,   U08,   166, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
+      lockshifttps                  = array,   U08,   166, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
 
      TrannsEnable                  = bits,    U08,  170,  [0:0], "Off", "On"
      CpinEnable                    = bits,    U08,  170,  [1:1], "Off", "On"
-     BpinPollarity                 = bits,    U08,  170,  [2:3], "4L60E", "4L80E", "INVALID","INVALID"                                                                                                                                                                          
+     BpinPollarity                 = bits,    U08,  170,  [2:2], "4L60E", "4L80E", "INVALID","INVALID"                                                                                                                                                                          
 
-     Apin                          = bits,    U08,  170,  [4:7],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
-     Bpin                          = bits,    U08,  171,  [0:3],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"
-     Cpin                          = bits,    U08,  171,  [4:7],  "9","10","11","12","22","23","24","25","26","27","28","29","INVALID","INVALID","INVALID","INVALID"
+     Apin                          = bits,    U08,  170,  [3:7],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     Bpin                          = bits,    U08,  171,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     Bpinunused4                   = bits,    U08,  171,  [6:7], 
+     Cpin                          = bits,    U08,  172,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     Cpinunused4                   = bits,    U08,  172,  [6:7],  "0", "1", "2", "3" 
  
-     ApinMaxRPM                    = scalar,  U08,  172,  "RPM",    100,        0.0,     0.0,    25500,    0
-     BpinMaxRPM                    = scalar,  U08,  173,  "RPM",    100,        0.0,     0.0,    25500,    0
+     ApinMaxRPM                    = scalar,  U08,  173,  "RPM",    100,        0.0,     0.0,    25500,    0                                                                                                                   
+     BpinMaxRPM                    = scalar,  U08,  174,  "RPM",    100,        0.0,     0.0,    25500,    0                                                                                                                    
 
-     inputpinN                     = bits,    U08,  174,  [0:3],  "20","21","37","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID"
-     inputpinR                     = bits,    U08,  174,  [4:7],  "20","21","37","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID"
- 
-      Unused15_98_255              = array,   U08,   175,   [81],   "%", 1.0,   0.0,     0.0,      255,    0
+     inputpinN                     = bits,    U08,  175,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     inputpinNunused4              = bits,    U08,  175,  [6:7],  "0", "1", "2", "3" 
+     inputpinR                     = bits,    U08,  176,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     inputpinRunused4              = bits,    U08,  176,  [6:7],  "0", "1", "2", "3" 
+
+      Unused15_106_255             = array,   U08,   177,   [79],   "%", 1.0,   0.0,     0.0,      255,    0
 
 ;-------------------------------------------------------------------------------
 
@@ -5673,7 +5677,7 @@ cmdVSSratio6 =      "E\x99\x06"
   entry = map_psi,         "Boost PSI",        float,  "%.1f"
   entry = boostTarget,     "Boost Target",     int,    "%d",       { boostEnabled }
   entry = boostDuty,       "Boost Duty",       int,    "%d",       { boostEnabled }
-  entry = flexBoostAdj,    "Boost Flex Adjust",int,    "%d",       { flexEnabled && boostEnabled }
+  ;entry = flexBoostAdj,    "Boost Flex Adjust",int,    "%d",       { flexEnabled && boostEnabled }
   entry = boostCutOut ,    "Boost cut",        int,    "%d"
   entry = launchHard ,     "Hard Launch",      int,    "%d"
   entry = hardLimitOn ,    "Hard Limiter",     int,    "%d"
