--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1479,41 +1479,37 @@ page = 15
       rollingProtCutPercent         = array,   U08,   102, [4],    "%",    1.0,    0,   0,    100,      0
        ;trannscontrol
       shift2_1vss                   = array,   U08,   106, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift2_1tps                   = array,   U08,   110, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift2_1tps                   = array,   U08,   110, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       shift1_2vss                   = array,   U08,   114, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift1_2tps                   = array,   U08,   118, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift1_2tps                   = array,   U08,   118, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       shift3_2vss                   = array,   U08,   122, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift3_2tps                   = array,   U08,   126, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift3_2tps                   = array,   U08,   126, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       shift2_3vss                   = array,   U08,   130, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift2_3tps                   = array,   U08,   134, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift2_3tps                   = array,   U08,   134, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       shift4_3vss                   = array,   U08,   138, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift4_3tps                   = array,   U08,   142, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift4_3tps                   = array,   U08,   142, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       shift3_4vss                   = array,   U08,   146, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      shift3_4tps                   = array,   U08,   150, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      shift3_4tps                   = array,   U08,   150, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       unlockshiftvss                = array,   U08,   154, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      unlockshifttps                = array,   U08,   158, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      unlockshifttps                = array,   U08,   158, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
       lockshiftvss                  = array,   U08,   162, [4],     "km/h",       1,       0.0,   0.0,     255,      0 
-      lockshifttps                  = array,   U08,   166, [4],     "TPS",      0.5,        0.0,   0.0,     127.0,      1
+      lockshifttps                  = array,   U08,   166, [4],     "%TPS",     0.5,    0.0,    0.0,   100.0,  1
 
      TrannsEnable                  = bits,    U08,  170,  [0:0], "Off", "On"
-     CpinEnable                    = bits,    U08,  170,  [1:1], "Off", "On"
-     BpinPollarity                 = bits,    U08,  170,  [2:2], "4L60E", "4L80E", "INVALID","INVALID"                                                                                                                                                                          
 
-     Apin                          = bits,    U08,  170,  [3:7],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
+     BpinPollarity                 = bits,    U08,  170,  [1:1], "4L60E", "4L80E"                                                                                                                                                                          
+
+     Apin                          = bits,    U08,  170,  [2:7],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
      Bpin                          = bits,    U08,  171,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
-     Bpinunused4                   = bits,    U08,  171,  [6:7], 
+     Bpinunused4                   = bits,    U08,  171,  [6:7],  "0", "1", "2", "3" 
      Cpin                          = bits,    U08,  172,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
      Cpinunused4                   = bits,    U08,  172,  [6:7],  "0", "1", "2", "3" 
  
      ApinMaxRPM                    = scalar,  U08,  173,  "RPM",    100,        0.0,     0.0,    25500,    0                                                                                                                   
      BpinMaxRPM                    = scalar,  U08,  174,  "RPM",    100,        0.0,     0.0,    25500,    0                                                                                                                    
 
-     inputpinN                     = bits,    U08,  175,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
-     inputpinNunused4              = bits,    U08,  175,  [6:7],  "0", "1", "2", "3" 
-     inputpinR                     = bits,    U08,  176,  [0:5],  "Unused", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "INVALID"
-     inputpinRunused4              = bits,    U08,  176,  [6:7],  "0", "1", "2", "3" 
-
-      Unused15_106_255             = array,   U08,   177,   [79],   "%", 1.0,   0.0,     0.0,      255,    0
+    
+      Unused15_106_255             = array,   U08,   175,   [81],   "%", 1.0,   0.0,     0.0,      255,    0
 
 ;-------------------------------------------------------------------------------
 
@@ -1638,6 +1634,13 @@ page = 15
     requiresPowerCycle = oilPressureEnable
     requiresPowerCycle = fuelPressurePin
     requiresPowerCycle = oilPressurePin
+
+    
+    requiresPowerCycle = TrannsEnable
+    requiresPowerCycle = Apin
+    requiresPowerCycle = Bpin
+    requiresPowerCycle = Cpin
+    requiresPowerCycle = BpinPollarity 
 
     defaultValue = pinLayout,   1
     defaultValue = TrigPattern, 0
@@ -1791,7 +1794,14 @@ page = 15
     defaultValue = airConCompOnDelay, 0.4
     defaultValue = airConAfterStartDelay, 5.00
     defaultValue = airConRPMCutTime, 5.00
-    
+
+    defaultValue = TrannsEnable,0
+    defaultValue = Apin,0
+    defaultValue = Bpin,0
+    defaultValue = Cpin,0
+    defaultValue = BpinPollarity,0 
+      
+   
     ;VSS Ratios and calibration need controller priority so they can be set with the command buttons
     controllerPriority = vssPulsesPerKm
     controllerPriority = vssRatio1
@@ -2527,14 +2537,13 @@ menuDialog = main
     dialog = shiftcon, "TRANNSCONTROL"
         field = "TRANNS ENABLE",     TrannsEnable
         field = "4L80/4L60",         BpinPollarity, {TrannsEnable}
-        field = "input 1st hold ",   inputpinN         {TrannsEnable}
-        field = "input 2nd hold ",   inputpinR     {TrannsEnable}
         field = "Asol",              Apin,          {TrannsEnable}
         field = "Bsol",              Bpin,          {TrannsEnable}
+        field = "LOCKUP",            Cpin,          {TrannsEnable}
         field = "WOT1-2",            ApinMaxRPM,    {TrannsEnable}
         field = "WOT2-3",            BpinMaxRPM,    {TrannsEnable}
-        field = "LOCKUP",            Cpin,      {TrannsEnable},    {CpinEnable}
-        field = "LOCKUP ENABLE",     CpinEnable,    {TrannsEnable}
+       
+       
 
     dialog = engine_constants_southwest, "Speeduino Board"
         field = "!This is a critical setting!"
@@ -4174,7 +4183,9 @@ menuDialog = main
         displayOnlyField = "Programmable out 6", outputPin5, {outputPin[5]}
         displayOnlyField = "Programmable out 7", outputPin6, {outputPin[6]}
         displayOnlyField = "Programmable out 8", outputPin7, {outputPin[7]}
-    
+        displayOnlyField = "Asol",              Apin,          {TrannsEnable}
+        displayOnlyField = "Bsol",              Bpin,          {TrannsEnable}
+        displayOnlyField = "LOCKUP",            Cpin,          {TrannsEnable}   
   ;Rule 1
   dialog = prgm_out_rules_1_condition_1, "Condition 1", xAxis
     field = "",   firstDataIn0,       {outputPin[0]}
